# fcitx-tcode

./: Cargo.toml  Makefile
fcitx-sys/: Cargo.toml  wrapper.h
fcitx-sys/src/: bindings.rs  lib.rs
files/: fcitx-tcode.conf  tcode.conf
src/: convert.rs  keyboard.rs  lib.rs  tc_table.rs
src/fcitx/: key.rs  mod.rs
